--- a/docs/create/docker/index-docker.mdx
+++ b/docs/create/docker/index-docker.mdx
@@ -6,7 +6,7 @@ slug: /create/docker
 ---
 
 
-### Installing and creating Redis database using Docker container
+### Installing and creating Redis database using Docker 
 
 #### Pre-requisites:
 
