--- a/docs/create/index-create.mdx
+++ b/docs/create/index-create.mdx
@@ -50,7 +50,7 @@ The following links provides your the different options to create a new Redis da
 <div className="ri-description-short ">
     <div className="ri-icon"><span className="fe fe-zap" /></div>
     <div className="ri-detail">
-        <div className="ri-title"><a  href={useBaseUrl('/create/resoftware')}>Redis Enterprise Software</a></div>
+        <div className="ri-title"><a  href={useBaseUrl('/create/resoftware')}>Redis from Source</a></div>
         <div className="ri-description text--center ">
         <a  href={useBaseUrl('/create/resoftware')}>
         <img src={useBaseUrl('/img/logos/resoftware.png')} width="85" />
