--- a/docs/create/resoftware/index-resoftware.mdx
+++ b/docs/create/resoftware/index-resoftware.mdx
@@ -9,7 +9,7 @@ slug: /create/resoftware
 ## Installing and Create Redis database from Source
 
 
-### Download, extract and compile Redis with:
+### Download, extract and compile Redis
  
 ```
 wget http://download.redis.io/redis-stable.tar.gz
@@ -32,7 +32,7 @@ The binaries that are now compiled are available in the src directory. Run Redis
 $ redis-server
 ```
 
-You can interact with Redis using the built-in client:
+### Interacting with Redis 
 
 ```
 $ src/redis-cli
