--- a/docs/create/index-create.mdx
+++ b/docs/create/index-create.mdx
@@ -53,7 +53,7 @@ The following links provides your the different options to create a new Redis da
         <div className="ri-title"><a  href={useBaseUrl('/create/resoftware')}>Redis from Source</a></div>
         <div className="ri-description text--center ">
         <a  href={useBaseUrl('/create/resoftware')}>
-        <img src={useBaseUrl('/img/logo-1.png')} width="85" />
+        <img src={useBaseUrl('/img/redis-logo.png')} width="85" />
         </a>
         </div>
     </div>
