--- a/docs/create/resoftware/index-resoftware.mdx
+++ b/docs/create/resoftware/index-resoftware.mdx
@@ -6,7 +6,7 @@ slug: /create/resoftware
 ---
 
 
-## Installing and Create Redis database from Source
+## Install and Create Redis database from Source
 
 
 ### Download, extract and compile Redis
