--- a/docs/create/resoftware/index-resoftware.mdx
+++ b/docs/create/resoftware/index-resoftware.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-software
-title: Installing Redis from Source
+title: From Source
 sidebar_label: Redis Enterprise
 slug: /create/resoftware
 ---
