--- a/docs/create/resoftware/index-resoftware.mdx
+++ b/docs/create/resoftware/index-resoftware.mdx
@@ -1,12 +1,10 @@
 ---
 id: index-software
-title: From Source
+title: Install and Create Redis database from Source
 sidebar_label: Redis Enterprise
 slug: /create/resoftware
 ---
 
-
-## Install and Create Redis database from Source
 
 
 ### Download, extract and compile Redis
