--- a/docs/create/docker/index-docker.mdx
+++ b/docs/create/docker/index-docker.mdx
@@ -1,12 +1,10 @@
 ---
 id: index-docker
-title: Using Docker
+title: Installing and creating Redis database using Docker
 sidebar_label: Docker
 slug: /create/docker
 ---
 
-
-### Installing and creating Redis database using Docker 
 
 #### Pre-requisites:
 
