--- a/docs/create/cloud/index-cloud.mdx
+++ b/docs/create/cloud/index-cloud.mdx
@@ -1,12 +1,10 @@
 ---
 id: index-cloud
-title: Using Redis Enterprise Cloud
+title: Create a database using Redis Enterprise Cloud
 sidebar_label: Redis Enterprise Cloud
 slug: /create/cloud
 ---
 
-
-### Create a database using Redis Enterprise Cloud 
 
 1. You will have to create Redis Cloud account by visiting [link](https://redislabs.com/try-redis-modules-for-free) below. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
