--- a/docs/create/docker/index-docker.mdx
+++ b/docs/create/docker/index-docker.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-docker
-title: Installing and creating Redis database using Docker
+title: Install and create Redis database using Docker
 sidebar_label: Docker
 slug: /create/docker
 ---
