--- a/docs/create/resoftware/index-resoftware.mdx
+++ b/docs/create/resoftware/index-resoftware.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-software
 title: Install and Create Redis database from Source
-sidebar_label: Redis Enterprise
+sidebar_label: Redis from Source
 slug: /create/resoftware
 ---
 
