--- a/docs/create/index-create.mdx
+++ b/docs/create/index-create.mdx
@@ -7,7 +7,7 @@ slug: /create/
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-The following links provides your the different options to create a new Redis database either on the Cloud or using local software. (Docker, Redis Enterprise, from Soruces)
+The following links provides you with the available options to create a new Redis database either on the Cloud or using local software. (Docker, Redis Enterprise, from Sources)
 
 <div className="row text--center">
 <div className=" col text--center " >
