--- a/docs/create/docker/index-docker.mdx
+++ b/docs/create/docker/index-docker.mdx
@@ -34,6 +34,8 @@ $ docker exec -it 241 sh
 PONG
 ```
 
+Please note: By default, Redis has 0-15 indexes for databases, you can change that number databases NUMBER in redis.conf.
+
 #### Running Redis container with Persistent Storage
 
 ```
