Reuse the language component in the developer page - issue #27

--- a/docs/develop/index-develop.mdx
+++ b/docs/develop/index-develop.mdx
@@ -1,41 +1,12 @@
 ---
 id: index-develop
 title: Develop
+hide_title: true
 sidebar_label: Develop
 hide_table_of_contents: true
 slug: /develop/
+custom_edit_url: 
 ---
+import Languages from '@theme/Languages';
 
-import useBaseUrl from '@docusaurus/useBaseUrl';
-
-
-### Build applications with Redis and your favorite programing language
-
-
-
-<div className="row">
-    <div className=" col col--2 text--center">
-        <a  href={useBaseUrl('/develop/java')}>
-        <img src={useBaseUrl('/img/logos/java.png')} />
-        <h4>Java</h4>
-        </a>     
-    </div>       
-    <div className=" col col--2 text--center">
-        <a  href={useBaseUrl('/develop/python')}>
-        <img src={useBaseUrl('/img/logos/python.png')} />
-        <h4>Python</h4>
-        </a>     
-    </div> 
-    <div className=" col col--2 text--center">
-        <a  href={useBaseUrl('/develop/node')}>
-        <img src={useBaseUrl('/img/logos/nodejs.png')} />
-        <h4>Node.js</h4>
-        </a>     
-    </div>          
-    <div className=" col col--2 text--center">
-        <a  href={useBaseUrl('/develop/golang')}>
-        <img src={useBaseUrl('/img/logos/golang.png')} />
-        <h4>Go</h4>
-        </a>     
-    </div>    
-</div>
+<Languages />
