--- a/docs/create/docker/index-docker.mdx
+++ b/docs/create/docker/index-docker.mdx
@@ -18,7 +18,7 @@ import RedisCard from '@site/src/theme/RedisCard';
   ]}>
   <TabItem value="Redis">
 
-### Pre-requisites:
+### Pre-requisite:
 
 Ensure that Docker is installed in your system. Follow https://docs.docker.com/engine/install/ if you haven’t installed yet.
 
