--- a/docs/create/docker/index-docker.mdx
+++ b/docs/create/docker/index-docker.mdx
@@ -11,7 +11,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 
 <Tabs
-  defaultValue="Redis Enterprise"
+  defaultValue="Redis"
   values={[
     {label: 'Redis', value: 'Redis'},
     {label: 'Redis Enterprise', value: 'Redis Enterprise'},
