fix link in menu dans guide pages, add link to author on ajeet article

--- a/docs/guides/import/database-migration-aws-elasticache-redis-enterprise-cloud.mdx
+++ b/docs/guides/import/database-migration-aws-elasticache-redis-enterprise-cloud.mdx
@@ -5,7 +5,7 @@ sidebar_label: Import Data
 slug: /guides/import/database-migration-aws-elasticache-redis-enterprise-cloud
 ---
 
-Authors: Ajeet Singh Raina, Julien Ruaux
+Authors: [Ajeet Singh Raina](https://github.com/ajeetraina), [Julien Ruaux](https://github.com/jruaux)
 
 Most of the database migration tools available today are offline in nature. They are complex and require manual intervention. 
 
