--- a/docs/guides/index.mdx
+++ b/docs/guides/index.mdx
@@ -15,7 +15,7 @@ import RedisCard from '@site/src/theme/RedisCard';
     <RedisCard 
         title="Import Data into Redis" 
         description="Discover the various options to import data into Redis" 
-        page="guides/import/"
+        page="/guides/import/"
         />
  </div>
  
