--- a/docs/guides/security/index-security.mdx
+++ b/docs/guides/security/index-security.mdx
@@ -4,3 +4,16 @@ title: Redis Security
 sidebar_label: Security
 slug: /guides/security/
 ---
+
+In this section of the site you will learn about Security and Redis.
+
+
+### "All" Redis
+
+* [Redis.io : Security Overview](https://redis.io/topics/security)
+* [Redis.io : ACL](https://redis.io/topics/acl) (Access Control List)
+
+### Redis Enterprise by Redis Labs
+* [Redis Enterprise Cloud : Security](https://docs.redislabs.com/latest/rc/security/)
+* [Tutorial: How to Use SSL/TLS With Redis Enterprise](/guide/security/how-to-use-ssl-tls-with-redis-enterprise) (`redis-cli`, Java, Python, Node,)
+
