--- a/docs/create/docker/index-docker.mdx
+++ b/docs/create/docker/index-docker.mdx
@@ -91,7 +91,7 @@ Note: On Windows, make sure Docker is configured to run Linux-based containers.
 docker run -d --cap-add sys_resource --name rp -p 8443:8443 -p 9443:9443 -p 12000:12000 redislabs/redis
 ```
 
-Open your preferred browser and type https://IPAddress:8443 to open Redis Enterprise UI.
+Open your preferred browser and type https://[IPAddress]:8443 to open Redis Enterprise UI.
 
 ![My Image](images/resoftware-1.png)
 
