Add Ajeet video about RedisInsight

--- a/docs/explore/index-explore.mdx
+++ b/docs/explore/index-explore.mdx
@@ -11,10 +11,19 @@ RedisInsight provides an intuitive and efficient GUI for Redis, allowing you to 
 
 ### RedisInsight in Action 
 
+
+**RedisInsight Overview** (RedisConf'20)
+
 <div class="text--center">
 <iframe width="672" height="378" src="https://www.youtube.com/embed/HBC3OSYOgj0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
+
+**Monitoring Redis data using RedisInsigh** (OSCONF 2020 Bangalore)
+
+<div class="text--center">
+<iframe width="672" height="378" src="https://www.youtube.com/embed/BVXFBhKeUxk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
 ---
 
