--- a/docs/guides/index.mdx
+++ b/docs/guides/index.mdx
@@ -2,7 +2,7 @@
 id: index-guides
 title: Guides
 sidebar_label: Guides
-slug: guides/index
+slug: /guides
 ---
 
 import RedisCard from '@site/src/theme/RedisCard';
