--- a/docs/create/index-create.mdx
+++ b/docs/create/index-create.mdx
@@ -10,15 +10,15 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 The following links provides you with the available options to create a new Redis database either on the Cloud or using local software. (Docker, Redis Enterprise, from Sources)
 
 <div className="row text--center">
-<div className=" col text--center " >
-<div className="ri-container text--center">
-<div className="ri-description-short text--center ">
-    <div className="ri-icon"><span className="fe fe-zap" /></div>
-    <div className="ri-detail text--center ">
-        <div className="ri-title text--center "><a  href={useBaseUrl('/create/cloud')}>Redis Enterprise Cloud</a></div>
-        <div className="ri-description text--center">
-        <a  href={useBaseUrl('/create/cloud')}>
-            <img src={useBaseUrl('/img/logos/cloud.png')} width="100"/>
+
+<div className="col">
+<div className="ri-container">
+<div className="ri-description-short">
+    <div className="ri-detail">
+        <h4 className="ri-title"><a href={useBaseUrl('/create/cloud')}>Redis Enterprise Cloud</a></h4>
+        <div className="ri-description">
+        <a href={useBaseUrl('/create/cloud')}>
+          <img src={useBaseUrl('/img/logos/cloud.png')} width="100"/>
         </a>
         </div>
     </div>
@@ -26,34 +26,33 @@ The following links provides you with the available options to create a new Redi
 </div>
 </div>
 
-<div className=" col text--center" >
+<div className="col">
 <div className="ri-container">
-<div className="ri-description-short ">
-    <div className="ri-icon"><span className="fe fe-zap" /></div>
+<div className="ri-description-short">
     <div className="ri-detail ">
-        <div className="ri-title"><a  href={useBaseUrl('/create/docker')}>Docker</a></div>
-        <div className="ri-description text--center">
-        <a  href={useBaseUrl('/create/docker')}>
-            <img src={useBaseUrl('/img/logos/docker.png')} width="100"/>
+        <h4 className="ri-title"><a href={useBaseUrl('/create/docker')}>Docker</a></h4>
+        <div className="ri-description">
+        <a href={useBaseUrl('/create/docker')}>
+          <img src={useBaseUrl('/img/logos/docker.png')} width="100"/>
         </a>
         </div>
     </div>
 </div>
 </div>
 </div>
+
 </div>
 
 <div className="row text--center">
 
-<div className=" col " >
+<div className="col" >
 <div className="ri-container">
-<div className="ri-description-short ">
-    <div className="ri-icon"><span className="fe fe-zap" /></div>
+<div className="ri-description-short">
     <div className="ri-detail">
-        <div className="ri-title"><a  href={useBaseUrl('/create/resoftware')}>Redis from Source</a></div>
-        <div className="ri-description text--center ">
-        <a  href={useBaseUrl('/create/resoftware')}>
-        <img src={useBaseUrl('/img/redis-logo.png')} width="85" />
+        <h4 className="ri-title"><a href={useBaseUrl('/create/resoftware')}>Redis from Source</a></h4>
+        <div className="ri-description">
+        <a href={useBaseUrl('/create/resoftware')}>
+          <img src={useBaseUrl('/img/redis-logo.png')} width="85" />
         </a>
         </div>
     </div>
@@ -61,15 +60,14 @@ The following links provides you with the available options to create a new Redi
 </div>
 </div>
 
-<div className=" col " >
+<div className="col" >
 <div className="ri-container">
-<div className="ri-description-short ">
-    <div className="ri-icon"><span className="fe fe-zap" /></div>
+<div className="ri-description-short">
     <div className="ri-detail">
-        <div className="ri-title"><a  href="https://docs.redislabs.com/latest/platforms/">Redis Enterprise & Kubernetes</a></div>
-        <div className="ri-description text--center ">
-        <a  href="https://docs.redislabs.com/latest/platforms/">
-        <img src={useBaseUrl('/img/logos/kubernetes.png')} width="150" />
+        <h4 className="ri-title"><a href="https://docs.redislabs.com/latest/platforms/">Redis Enterprise & Kubernetes</a></h4>
+        <div className="ri-description">
+        <a href="https://docs.redislabs.com/latest/platforms/">
+          <img src={useBaseUrl('/img/logos/kubernetes.png')} width="150" />
         </a>
         </div>
     </div>
