sidebar structure improvements

--- a/docs/explore/index-explore.mdx
+++ b/docs/explore/index-explore.mdx
@@ -2,7 +2,7 @@
 id: index-explore
 title: Explore Data
 sidebar_label: Explore
-slug: /explore/
+slug: /explore
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
