--- a/docs/guides/indexing/indexing-querying.mdx
+++ b/docs/guides/indexing/indexing-querying.mdx
@@ -1,7 +1,7 @@
 ---
 id: indexing-querying
 title: Indexing and Querying
-sidebar_label: Indexin
+sidebar_label: Indexing
 slug: /guides/indexing/
 
 ---
