--- a/docs/create/index-create.mdx
+++ b/docs/create/index-create.mdx
@@ -11,74 +11,64 @@ The following links provides you with the available options to create a new Redi
 
 <div className="row text--center">
 
-<div className="col">
-<div className="ri-container">
-<div className="ri-description-short">
-    <div className="ri-detail">
-        <h4 className="ri-title"><a href={useBaseUrl('/create/cloud')}>Redis Enterprise Cloud</a></h4>
-        <div className="ri-description">
-        <a href={useBaseUrl('/create/cloud')}>
-          <img src={useBaseUrl('/img/logos/cloud.png')} width="100"/>
-        </a>
-        </div>
+  <div className="col">
+    <div className="ri-container ri-link">
+      <div className="ri-description-short">
+          <div className="ri-detail">
+              <h4 className="ri-title">Redis Enterprise Cloud</h4>
+              <div className="ri-description">
+                <img src={useBaseUrl('/img/logos/cloud.png')} width="100" />
+              </div>
+          </div>
+      </div>
+      <a href={useBaseUrl('/create/cloud')} className="ri-card-link">Read More</a>
     </div>
-</div>
-</div>
-</div>
+  </div>
 
-<div className="col">
-<div className="ri-container">
-<div className="ri-description-short">
-    <div className="ri-detail ">
-        <h4 className="ri-title"><a href={useBaseUrl('/create/docker')}>Docker</a></h4>
-        <div className="ri-description">
-        <a href={useBaseUrl('/create/docker')}>
-          <img src={useBaseUrl('/img/logos/docker.png')} width="100"/>
-        </a>
-        </div>
+  <div className="col">
+    <div className="ri-container ri-link">
+      <div className="ri-description-short">
+          <div className="ri-detail ">
+              <h4 className="ri-title">Docker</h4>
+              <div className="ri-description">
+                <img src={useBaseUrl('/img/logos/docker.png')} width="100"/>
+              </div>
+          </div>
+      </div>
+      <a href={useBaseUrl('/create/docker')} className="ri-card-link">Read More</a>
     </div>
-</div>
-</div>
-</div>
+  </div>
 
 </div>
 
 <div className="row text--center">
 
-<div className="col" >
-<div className="ri-container">
-<div className="ri-description-short">
-    <div className="ri-detail">
-        <h4 className="ri-title"><a href={useBaseUrl('/create/resoftware')}>Redis from Source</a></h4>
-        <div className="ri-description">
-        <a href={useBaseUrl('/create/resoftware')}>
-          <img src={useBaseUrl('/img/redis-logo.png')} width="85" />
-        </a>
-        </div>
+  <div className="col" >
+    <div className="ri-container ri-link">
+      <div className="ri-description-short">
+          <div className="ri-detail">
+              <h4 className="ri-title">Redis from Source</h4>
+              <div className="ri-description">
+                <img src={useBaseUrl('/img/redis-logo.png')} width="85" />
+              </div>
+          </div>
+      </div>
+      <a href={useBaseUrl('/create/resoftware')} className="ri-card-link">Read More</a>
     </div>
-</div>
-</div>
-</div>
+  </div>
 
-<div className="col" >
-<div className="ri-container">
-<div className="ri-description-short">
-    <div className="ri-detail">
-        <h4 className="ri-title"><a href="https://docs.redislabs.com/latest/platforms/">Redis Enterprise & Kubernetes</a></h4>
-        <div className="ri-description">
-        <a href="https://docs.redislabs.com/latest/platforms/">
-          <img src={useBaseUrl('/img/logos/kubernetes.png')} width="150" />
-        </a>
-        </div>
+  <div className="col" >
+    <div className="ri-container ri-link">
+      <div className="ri-description-short">
+          <div className="ri-detail">
+              <h4 className="ri-title">Redis Enterprise & Kubernetes</h4>
+              <div className="ri-description">
+                <img src={useBaseUrl('/img/logos/kubernetes.png')} width="150" />
+              </div>
+          </div>
+      </div>
+      <a href={useBaseUrl('https://docs.redislabs.com/latest/platforms/')} rel="nofollow noopener" className="ri-card-link">Read More</a>
     </div>
-</div>
-</div>
-</div>
+  </div>
 
 </div>
-
-
-
-
-
-
