--- a/docs/create/cloud/index-cloud.mdx
+++ b/docs/create/cloud/index-cloud.mdx
@@ -6,7 +6,7 @@ slug: /create/cloud
 ---
 
 
-1. You will have to create Redis Cloud account by visiting [link](https://redislabs.com/try-redis-modules-for-free) below. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
+1. Create your free [Redis Enterprise Cloud account](https://redislabs.com/try-redis-modules-for-free). Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
 
 
