Updated Try Free link and added headers

--- a/docs/create/cloud/index-cloud.mdx
+++ b/docs/create/cloud/index-cloud.mdx
@@ -5,40 +5,40 @@ sidebar_label: Redis Enterprise Cloud
 slug: /create/cloud
 ---
 
+## Create free cloud account
+1. Create your free <a href="https://redislabs.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
-1. Create your free [Redis Enterprise Cloud account](https://redislabs.com/try-redis-modules-for-free). Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
-
-
-
+## Add subscription
 2.  Next, you will have to add  Redis Enterprise Cloud Essentials subscription. In the Redis Enterprise Cloud menu, click Subscriptions. At the bottom of the page, click the “+” sign.
 
 ![My Image](images/subscription.png)
 
-
-
-
+## Select cloud provider
 3. For the cloud provider, select Amazon AWS
 
 ![My Image](images/aws.png)
 
-
+## Selection region
 4. For the region where you want to use the subscription, select ap-south-1. Please note that it’s currently available only in the AWS/Mumbai 
 
 ![My Image](images/region.png)
 
-
+## Select free cloud plan
 5. In the Redis Enterprise Cloud service levels, select the Redis Cloud Essentials 30MB/1 Database level
 
 ![My Image](images/plan.png)
 
+## Create database
 6. Click Create. After you create a subscription, you can create a database:
 
 ![My Image](images/createdatabase.png)
 
+## Add database details
 7.  Enter a name for the database of your choice
 
 ![My Image](images/choosemodule.png)
 
+## Launch database
 8. Click "Activate" and wait for few seconds till it gets activated. Once fully activated, you will see the database endpoints as shown below:
 
 ![My Image](images/activate.png)
