Adjusted Guides sidebar and Explore structure

--- a/docs/guides/import/index-import.mdx
+++ b/docs/guides/import/index-import.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-import
 title: Import Data into Redis
-sidebar_label: Import
+sidebar_label: Importing Data
 slug: /guides/import/
 ---
 
