--- a/docs/guides/security/index-security.mdx
+++ b/docs/guides/security/index-security.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-security
 title: Redis Security
-sidebar_label: Security
+sidebar_label: Redis Security
 slug: /guides/security/
 ---
 
