--- a/docs/create/docker/index-docker.mdx
+++ b/docs/create/docker/index-docker.mdx
@@ -30,12 +30,11 @@ $ docker run --name myredis -d redis
 ```
 
 where,
-
 myredis is the name of Docker container
 -d represent daemon mode
 redis is the name of Docker Image which it fetches from Docker Hub.
 
-### Verify if Redis container is running or not:
+## Verify if Redis container is running or not:
 
 ```
 $ docker ps
@@ -76,7 +75,7 @@ If persistence is enabled, data is stored in the VOLUME /data, which can be used
 
 
 
-### Pre-requisite
+## Pre-requisite
 
 Ensure that Docker is installed in your system.
 
@@ -93,16 +92,16 @@ docker run -d --cap-add sys_resource --name rp -p 8443:8443 -p 9443:9443 -p 1200
 
 Open your preferred browser and type https://[IPAddress]:8443 to open Redis Enterprise UI.
 
-### Click on “Setup”.
+## Click on “Setup”.
 
 ![My Image](images/resoftware-1.png)
 
 
-### Enter your preferred FQDN 
+## Enter your preferred FQDN 
 
 ![My Image](images/resoftware-2.png)
 
-### Enter the admin credentials
+## Enter the admin credentials
 
 ![My Image](images/resoftware-4.png)
 
@@ -110,12 +109,12 @@ Open your preferred browser and type https://[IPAddress]:8443 to open Redis Ente
 
 ![My Image](images/resoftware-5.png)
 
-### Create a Database:
+## Create a Database:
 
 
 ![My Image](images/resoftware-7.png)
 
-### Access the database:
+## Access the database:
 
 
 ```
