--- a/docs/explore/index-explore.mdx
+++ b/docs/explore/index-explore.mdx
@@ -18,7 +18,7 @@ RedisInsight provides an intuitive and efficient GUI for Redis, allowing you to 
 </div>
 
 
-### Monitoring Redis data using RedisInsigh (OSCONF 2020 Bangalore)
+### Monitoring Redis data using RedisInsight (OSCONF 2020 Bangalore)
 
 <div class="text--center">
 <iframe width="672" height="378" src="https://www.youtube.com/embed/BVXFBhKeUxk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
