add ending slash and rename resoft to from sources - issues #42 #41

--- a/docs/create/cloud/index-cloud.mdx
+++ b/docs/create/cloud/index-cloud.mdx
@@ -2,7 +2,7 @@
 id: index-cloud
 title: Create a database using Redis Enterprise Cloud
 sidebar_label: Redis Enterprise Cloud
-slug: /create/cloud
+slug: /create/cloud/
 ---
 
 
