--- a/docs/create/docker/index-docker.mdx
+++ b/docs/create/docker/index-docker.mdx
@@ -2,7 +2,7 @@
 id: index-docker
 title: Install and create Redis database using Docker
 sidebar_label: Docker
-slug: /create/docker
+slug: /create/docker/
 ---
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
