--- a/docs/create/from-source/index-from-source.mdx
+++ b/docs/create/from-source/index-from-source.mdx
@@ -1,8 +1,8 @@
 ---
-id: index-software
-title: Install and Create Redis database from Source
+id: index-from-source
+title: Install and Create Redis database from Source Code
 sidebar_label: Redis from Source
-slug: /create/resoftware
+slug: /create/from-source/
 ---
 
 
