--- a/docs/create/index-create.mdx
+++ b/docs/create/index-create.mdx
@@ -21,7 +21,7 @@ The following links provides you with the available options to create a new Redi
               </div>
           </div>
       </div>
-      <a href={useBaseUrl('/create/cloud')} className="ri-card-link">Read More</a>
+      <a href={useBaseUrl('/create/cloud/')} className="ri-card-link">Read More</a>
     </div>
   </div>
 
@@ -35,7 +35,7 @@ The following links provides you with the available options to create a new Redi
               </div>
           </div>
       </div>
-      <a href={useBaseUrl('/create/docker')} className="ri-card-link">Read More</a>
+      <a href={useBaseUrl('/create/docker/')} className="ri-card-link">Read More</a>
     </div>
   </div>
 
@@ -53,7 +53,7 @@ The following links provides you with the available options to create a new Redi
               </div>
           </div>
       </div>
-      <a href={useBaseUrl('/create/resoftware')} className="ri-card-link">Read More</a>
+      <a href={useBaseUrl('/create/from-source/')} className="ri-card-link">Read More</a>
     </div>
   </div>
 
