--- a/docs/guides/import-data.mdx
+++ b/docs/guides/import-data.mdx
@@ -2,7 +2,7 @@
 id: import-data
 title: Import Data into Redis
 sidebar_label: Import Data
-slug: /guides/import-data
+slug: /guides/import-data/
 ---
 
 ## Import data to the Cloud
