--- a/docs/tools/index.mdx
+++ b/docs/tools/index.mdx
@@ -2,7 +2,7 @@
 id: index-tools
 title: Tools
 sidebar_label: Tools
-slug: /tools
+slug: /tools/
 ---
 import RedisCard from '@site/src/theme/RedisCard';
 
