--- a/docs/create/docker/index-docker.mdx
+++ b/docs/create/docker/index-docker.mdx
@@ -22,8 +22,9 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 Ensure that Docker is installed in your system. Follow https://docs.docker.com/engine/install/ if you haven’t installed yet.
 
-## Run the Redis instance:
+## Run the Redis container
 
+Execute the following command to run Redis container in the background in a “detached” mode.
 
 ```
 $ docker run --name myredis -d redis
@@ -31,8 +32,8 @@ $ docker run --name myredis -d redis
 
 where,
 myredis is the name of Docker container
--d represent daemon mode
-redis is the name of Docker Image which it fetches from Docker Hub.
+-d represent running Redis in a background in a “detached” mode.
+redis is the name of Docker Image that it fetches from Docker Hub.
 
 ## Verify if Redis container is running or not:
 
@@ -53,6 +54,7 @@ $ docker exec -it 241 sh
 
 ## Testing Redis container
 
+Execute the below command to test the Redis server:
 
 ```
 127.0.0.1:6379>ping
@@ -62,6 +64,8 @@ PONG
 Please note: By default, Redis has 0-15 indexes for databases, you can change that number databases NUMBER in redis.conf.
 
 ## Running Redis container with Persistent Storage
+
+In order to enable persistence,  you have to pass the "appendonly" option as "yes" as shown in the below example:
 
 ```
 $ docker run --name some-redis -d redis redis-server --appendonly yes
@@ -90,32 +94,53 @@ Note: On Windows, make sure Docker is configured to run Linux-based containers.
 docker run -d --cap-add sys_resource --name rp -p 8443:8443 -p 9443:9443 -p 12000:12000 redislabs/redis
 ```
 
-Open your preferred browser and type https://[IPAddress]:8443 to open Redis Enterprise UI.
+In the web browser on the host machine, go to https://localhost:8443 to see the Redis Enterprise Software web console.
 
-## Click on “Setup”.
+## Click on “Setup”
+
+Click Setup to start the node configuration steps.
+
 
 ![My Image](images/resoftware-1.png)
 
 
 ## Enter your preferred FQDN 
 
+In the Node Configuration settings, enter a cluster FQDN such as demo.redislabs.com. Then click Next button.
+
 ![My Image](images/resoftware-2.png)
+
+Enter your license key, if you have one. If not, click the Next button to use the trial version.
 
 ## Enter the admin credentials
 
+Enter an email and password for the admin account for the web console.
+
 ![My Image](images/resoftware-4.png)
 
-## Select "Single Region"  
+These credentials are also used for connections to the REST API. 
+Click OK to confirm that you are aware of the replacement of the HTTPS SSL/TLS certificate on the node, and proceed through the browser warning.
+ 
+
+
+## Create a Database:
+
+Select “redis database” and the “single region” deployment, and click Next.
 
 ![My Image](images/resoftware-5.png)
 
-## Create a Database:
+Enter a database name such as demodb and click Activate to create your database
 
 
 ![My Image](images/resoftware-7.png)
 
-## Access the database:
+You now have a Redis database!
 
+
+
+## Connecting using redis-cli 
+
+After you create the Redis database, you are ready to store data in your database. redis-cli is a built-in simple command-line tool to interact with Redis database. Run redis-cli, located in the /opt/redislabs/bin directory, to connect to port 12000 and store and retrieve a key in database1
 
 ```
 $ docker exec -it rp bash
