--- a/docs/create/from-source/index-from-source.mdx
+++ b/docs/create/from-source/index-from-source.mdx
@@ -7,7 +7,7 @@ slug: /create/from-source/
 
 
 
-### Download, extract and compile Redis
+## Step 1: Download, extract and compile Redis
  
 ```
 wget http://download.redis.io/redis-stable.tar.gz
@@ -27,13 +27,13 @@ Or just using ```sudo make install.```
 The binaries that are now compiled are available in the src directory. 
 
 
-### Running Redis Server
+### Step 2: Running Redis Server
  
 ```
 $ redis-server
 ```
 
-### Interacting with Redis Client
+### Step 3: Interacting with Redis Client
 
 ```
 $ src/redis-cli
