remove the data modeling section and update indexing section - issues #49 #44

--- a/docs/guides/index.mdx
+++ b/docs/guides/index.mdx
@@ -23,7 +23,7 @@ import RedisCard from '@site/src/theme/RedisCard';
     <RedisCard 
         title="Indexing and Querying" 
         description="Learn how to query data by values" 
-        page="guides/indexing/"
+        page="/guides/indexing/"
         />
  </div>
 
@@ -40,11 +40,7 @@ import RedisCard from '@site/src/theme/RedisCard';
  </div>
  
  <div class="col">
-    <RedisCard 
-        title="Data Modeling" 
-        description="Data modelinging for Redis" 
-        page="/guides/data-modeling/"
-        />     
+  
  </div>
 
 </div>
