docker images resize + box-shadow

--- a/docs/create/docker/index-docker.mdx
+++ b/docs/create/docker/index-docker.mdx
@@ -77,7 +77,7 @@ If persistence is enabled, data is stored in the VOLUME /data, which can be used
 
  
 </TabItem>
-  <TabItem value="Redis Enterprise">
+  <TabItem value="Redis Enterprise" className="has-small-images">
 
 ## Redis Enterprise
 
